# gears

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
internal/: gear.hpp  gears.cpp  gears.hpp
internal/components/: rotation.hpp  selectable.hpp
internal/systems/: rotation.cpp  rotation.hpp
